consistency is the key

--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
   <h2>Update CSS Variables with <span class='hl'>JS</span></h2>
 
   <div class="controls">
-		<label for="base">Top Colour</label>
+		<label for="base">Choose Top Colour</label>
 		<input id="base" type="color" name="base" value="#33FF52">
 
-    <label for="base">Mid Colour</label>
+    <label for="base">Choose Mid Colour</label>
     <input id="base" type="color" name="base2" value="#3374FF">
 
-		<label for="base">Mid Color</label>
+		<label for="base">Choose Mid Color</label>
 		<input id="base" type="color" name="base3" value="#FFFF33">
 
-		<label for="base">Base Color</label>
+		<label for="base">Choose Base Color</label>
 		<input id="base" type="color" name="base4" value="#FF4C33">
 
 		<br>
